--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: ben andrew
+position: senior research assistant
+affiliation: center for computational brain science, carney institute, brown university
+email: benjamin_andrew@brown.edu
 keywords: minimal academic
-google_scholar: https://scholar.google.com/
-github_link: https://github.com/yaoyao-liu/minimal-light
-linkedin: https://www.linkedin.com/
 avatar: ./assets/img/avatar.png
 google_analytics: UA-111540567-4
-favicon: ./assets/img/favicon.png
+favicon: ./assets/img/benwandrew.png
 favicon_dark: ./assets/img/favicon-dark.png
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light.yyliu.net/
