--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ position: senior research assistant
 affiliation: center for computational brain science, carney institute, brown university
 email: benjamin_andrew@brown.edu
 keywords: minimal academic
-avatar: ./assets/img/avatar.png
+avatar: ./assets/img/benwandrew.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/benwandrew.png
 favicon_dark: ./assets/img/favicon-dark.png
