--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ben andrew
-position: senior research assistant
-affiliation: center for computational brain science, carney institute, brown university
+position: apprentice
+affiliation: ccbs, carney institute, brown university
 email: benjamin_andrew@brown.edu
 keywords: minimal academic
 avatar: ./assets/img/benwandrew.png
