--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ affiliation: ccbs, carney institute, brown university
 email: benjamin_andrew@brown.edu
 keywords: minimal academic
 avatar: ./assets/img/benwandrew.png
-google_analytics: UA-111540567-4
 favicon: ./assets/img/benwandrew.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon_dark: ./assets/img/benwandrew.png
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light.yyliu.net/
 remote_theme: yaoyao-liu/minimal-light
