--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ben andrew
 position: apprentice
-affiliation: ccbs, carney institute, brown university
+affiliation: center for computational brain science, carney institute
 email: benjamin_andrew@brown.edu
 keywords: minimal academic
 avatar: ./assets/img/benwandrew.png
